Deploy presell for httpsmitolyncomwelcomehopgersoncosthopid585f1b8b-c262-4957-8213-6b8433dd8cea

--- a/httpsmitolyncomwelcomehopgersoncosthopid585f1b8b-c262-4957-8213-6b8433dd8cea/index.html
+++ b/httpsmitolyncomwelcomehopgersoncosthopid585f1b8b-c262-4957-8213-6b8433dd8cea/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Get yours today and enjoy exclusive benefits. Fast shipping and secure payment. Limited stock available. Order now and enhance your experience.
+    <meta name="description" content="Get yours today and enjoy exclusive benefits, fast shipping, and a satisfaction guarantee. Don't miss out, buy now and elevate your experience
 " />
     <meta name="keywords" content="MITOLYN" />
     <meta name="robots" content="noindex, nofollow" />
