Deploy presell for httpsteslacarenettesla-grounding-dgaffcostaaa

--- a/httpsteslacarenettesla-grounding-dgaffcostaaa/index.html
+++ b/httpsteslacarenettesla-grounding-dgaffcostaaa/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Get yours now and enjoy exclusive benefits. Enhance your daily routine with this amazing product. Limited stock available, order today for fast shipping.
+    <meta name="description" content="Get yours now and enjoy the amazing benefits of this product. Fast shipping and great value. Don't miss out, order today and experience the difference
 " />
     <meta name="keywords" content="Tesla Grounding | Produto de envio" />
     <meta name="robots" content="noindex, nofollow" />
